--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 - main
 
 pool:
-  #vmImage: Azure Pipelines # examples of other options:'macOS-10.15','windows-latest'
+  #vmImage: ubuntu-latest # examples of other options:'macOS-10.15','windows-latest'
   pool: Azure Pipelines
 
 steps:
